# tmit-star

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  LICENSE  README.md  build.sh  exoplanet.cc  meson.build  run.sh  tmit-star.cc
.github/workflows/: citation-validate.yml
experiment_specs/: 100_trial_experiment.json  3_trial_experiment.json  short_timeout.json
experiments/: experiments.cc  experiments.hh
input/: input.cc  input.hh  pddl.cc  pddl.hh  scene.cc  scene.hh
itstar/: AITstar.cpp  AITstar.h
itstar/aitstar/: ImplicitGraph.h
itstar/aitstar/src/: ImplicitGraph.cpp
lua/: predicates.lua  tmit-star.lua
models/: pr2.urdf  pr2_collision_blocklist.csv  pr2_right_arm.urdf  pr2_xacro.urdf  pr2_xacro_collision_blocklist.csv  pr2_xacro_original.urdf  stick_blue.mtl  stick_green.mtl  stick_red.mtl
models/pr2_description/cmake/: pr2_descriptionConfig-version.cmake  pr2_descriptionConfig.cmake
output/: output.cc  output.hh
planner/: bounds.hh  collisions.cc  collisions.hh  cspace.cc  cspace.hh  expression_tree.cc  expression_tree.hh  goal.cc  goal.hh  lua_env.cc  lua_env.hh  mode.cc  mode.hh  mode_atlas.cc  mode_atlas.hh  mode_sampler.hh  motion_validation.cc  motion_validation.hh  nearest_neighbors.hh  optimization_objective.cc  optimization_objective.hh  plan_context.hh  plan_context_fwd.hh  predicate.hh  sampler.cc  sampler.hh  scenegraph.cc  scenegraph.hh  solver.cc  solver.hh  state.hh  symbolic.cc  symbolic.hh  task_plan.cc  task_plan.hh  task_plan_propagator.cc  task_plan_propagator.hh
problems/clutter/pddl/: domain.pddl  pb_1.pddl  pb_10.pddl  pb_11.pddl  pb_12.pddl  pb_13.pddl  pb_14.pddl  pb_2.pddl  pb_3.pddl  pb_4.pddl  pb_5.pddl  pb_6.pddl  pb_7.pddl  pb_8.pddl  pb_9.pddl  pb_full.pddl  pb_trivial.pddl
problems/clutter/problems/: clutter_pb_1.json  clutter_pb_10.json  clutter_pb_11.json  clutter_pb_12.json  clutter_pb_13.json  clutter_pb_14.json  clutter_pb_2.json  clutter_pb_3.json  clutter_pb_4.json  clutter_pb_5.json  clutter_pb_6.json  clutter_pb_7.json  clutter_pb_8.json  clutter_pb_9.json  clutter_pb_trivial.json  clutter_testing.json  clutter_testing_xacro.json
problems/clutter/scenes/: pb_10_initial_scene.json  pb_11_initial_scene.json  pb_12_initial_scene.json  pb_13_initial_scene.json  pb_14_final_example_scene.json  pb_14_initial_scene.json  pb_1_initial_scene.json  pb_2_initial_scene.json  (+9 more)
subprojects/: autodiff.wrap  date.wrap  dbg.wrap  filestl.wrap  lazycsv.wrap  ompl.wrap  robin_hood.wrap  sexplib.wrap  tinyobjloader.wrap
util/: bidirectional_map.hh  instrumentation.cc  instrumentation.hh  utils.cc  utils.hh
(+73 files in other folders)
